# contextfs

./: .env.example  .gitignore  AGENT_INTEGRATION.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json  test_diff.go  tsconfig.json  vitest.config.ts
.githooks/: pre-commit
browser-extension/: README.md
browser-extension/crates/core/: Cargo.toml  synonyms.json
browser-extension/crates/core/src/: chunker.rs  dedup.rs  extractor.rs  importance.rs  lib.rs  scorer.rs  session.rs  types.rs
dashboard/: tsconfig.json
docs/: ARCHITECTURE_GUIDE.md  PROJECT_STRUCTURE.md  README.md
eval/: dataset.json
llmeval/: go.mod  real_world_dataset.json  sample_dataset.json
mairu/: README.md  go.mod  go.sum  tui_patch.go
mairu-zed-extension/: README.md  extension.toml
scripts/: check-fixtures.sh
src/: ContextManager.ts  TursoVectorDB.ts  cli.ts  client.ts  config.ts  contextManager.ts  daemon.ts  dashboardApi.ts  dreamer.ts  elasticDB.ts  embedder.ts  evalSeeder.ts  evaluate.ts  index.ts  ingestor.ts  jsonUtils.ts  llmRouter.ts  nlEnricher.ts  seed-cv-parser.ts  seed.ts  setup.ts  types.ts  typescriptDescriber.ts  vibeEngine.ts
tests/: batchWriter.test.ts  budget.test.ts  client.test.ts  config.test.ts  configParsing.test.ts  contentSecurity.test.ts  daemon.test.ts  daemonCache.test.ts  daemonParallel.test.ts  dreamer.test.ts  embedder.test.ts  evalUtils.test.ts  ingestor.test.ts  jsonUtils.test.ts  languageDescriber.test.ts  llmRouter.test.ts  nlDescriber.test.ts  nlEnricher.test.ts  pythonDescriber.test.ts  scorer.test.ts  (+6 more)
(+498 files in other folders)
