[package]
name = "browser-extension-core"
version = "0.1.0"
edition = "2021"
license = "BlueOak-1.0.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.26.0"
rust-stemmers = "1"

[dev-dependencies]
insta = { version = "1.47.2", features = ["glob", "json"] }
